# Rexicon

./: CMakeLists.txt  README.md
resources/shaders/: PGG.frag  PGG.vert  simple.frag  simple.vert
src/rexicon/: Camera.cpp  Camera.h  Collider.cpp  Collider.h  Core.cpp  Core.h  Input.cpp  Input.h  MeshRenderer.cpp  MeshRenderer.h  Module.cpp  Module.h  Object.cpp  Object.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  rexicon.h
src/testProj/: main.cpp
